--- a/Frontend/my-app/package.json
+++ b/Frontend/my-app/package.json
@@ -2,8 +2,9 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  
   "dependencies": {
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -47,6 +48,4 @@
   "devDependencies": {
     "tailwindcss": "^3.3.3"
   }
-  
-  
 }
